dfir_rs/tests/compile-fail/nightly/surface_singleton_nostate.stderr
error: Cannot reference operator `null`. Use `singleton()`, `optional()`, or `handoff()` to create a referenceable name.
 --> tests/compile-fail/nightly/surface_singleton_nostate.rs:7:40
  |
7 |             -> filter(|value| value <= #my_ref.as_reveal_ref())
  |                                        ^^^^^^^
